End of lesson 14. Created Transcode Profile config entity.

--- a/docroot/modules/custom/transcode_profile/transcode_profile.links.menu.yml
+++ b/docroot/modules/custom/transcode_profile/transcode_profile.links.menu.yml
@@ -5,3 +5,11 @@ transcode_profile.admin_settings_form:
   parent: system.admin_config_development
   weight: 99
 
+# Transcode profile menu items definition
+entity.transcode_profile.collection:
+  title: 'Transcode profile'
+  route_name: entity.transcode_profile.collection
+  description: 'List Transcode profile (bundles)'
+  parent: system.admin_structure
+  weight: 99
+
